Several styling updates: - placed icons in new folder icons under assets. - Replaced theme toggler with button (todo; needs fixing!!) - Replaced dashboard icon in the menu - Fixed the buttons in the top right corner, aligned properly and sized them. - Started with some changes to the center 'Stake' box. Text changes, font size changes, added the 'important' italic notification.

--- a/src/views/Stake/stake.scss
+++ b/src/views/Stake/stake.scss
@@ -2,7 +2,7 @@
 .ohm-card {
     color: #eee;
     overflow: hidden;
-    min-height: 45vh;
+    min-height: 55vh;
     max-height: 60vh;
     max-width: 60vw;
     min-width: 50vw;
@@ -140,8 +140,15 @@
     }
 }
 
+.stake-notification {
+    font-size: 12px;
+    font-style: italic;
+    margin-top: 15px;
+}
 
-
+.stake-price-data-column p {
+    font-size: 1rem;
+}
   
 
   
